# reffy

./: .env.example  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  init.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.references/: AGENTS.md  manifest.json
.references/artifacts/: anti-design-docs.md  decision-note-v1.md  doctor-command-plan.md  telemetry.md  testing-reffy-10.md  testing-reffy-ts-2.md  testing-reffy-ts-4.md  testing_reffy_6_ts-conflict.md  testing_reffy_6_ts.md  testing_reffy_9_ts.md  testing_reffy_ts_1-conflict.md  testing_reffy_ts_1.md  testing_reffy_ts_3-conflict.md  testing_reffy_ts_3.md  testing_reffy_ts_5.md  testing_reffy_ts_7.md  testing_reffy_ts_8.md
.references/links/: linear.json
.reffy/: AGENTS.md  manifest.json
.reffy/artifacts/: adding-helper-script-for-paseo-deploy.md  archive-modified-requirements-gap.md  custom-parser.md  init-bootstrap-consolidation.md  manifest-identity.md  multi-workspace-membership.md  tatr.md  (+17 more)
openspec/: AGENTS.md  project.md
reffyspec/: AGENTS.md  project.md
scripts/: reffy-remote-backend-demo.mjs
src/: cli.ts  diagram.ts  doctor.ts  env.ts  gitignore.ts  index.ts  linear.ts  manifest.ts  plan-archive.ts  plan-runtime.ts  plan.ts  planning-paths.ts  planning-workspace.ts  refs-paths.ts  remote.ts  server.ts  skills.ts  spec-runtime.ts  storage.ts  types.ts  watcher.ts  workspace.ts
test/: cli.integration.test.ts  doctor.test.ts  helpers.ts  manifest.test.ts  remote.test.ts  skills.test.ts  storage.test.ts
(+109 files in other folders)
